--- a/rails_panel/assets/stylesheets/panel.css
+++ b/rails_panel/assets/stylesheets/panel.css
@@ -2,6 +2,16 @@
   -webkit-box-sizing: border-box;
 }
 
+body.rails-panel {
+  background: #fff;
+}
+
+ul {
+  -webkit-margin-before: 0;
+  -webkit-margin-after: 0;
+  -webkit-margin-start: -30px;
+}
+
 .data-grid {
   border: none;
   position: absolute;
@@ -13,7 +23,7 @@
 
 #tabs, table, tbody, tr, th, .data-grid {
   -webkit-touch-callout: none;
-}  
+}
 
 .data-grid table {
   table-layout: fixed;
@@ -66,7 +76,7 @@ table#requests td {
 }
 
 .data-container tr {
-  height: 28px; 
+  height: 28px;
 }
 
 .data-container tr.filler {
@@ -243,7 +253,6 @@ table.header th {
 .tabbed-pane-header {
   height: 31px;
   padding-top: 8px;
-  padding-left: 25px;
   white-space: nowrap;
   background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#ECECEC), to(#D9D9D9));
   border-bottom: 1px solid #A3A3A3;
@@ -251,13 +260,6 @@ table.header th {
 
 .tabbed-pane-header-contents {
   margin: 0 10px;
-}
-
-ul.tabbed-pane-header-tabs {
-  position:relative;
-  top:-16px;
-  left:-50px;
-  min-width: 300px;
 }
 
 .fl {
@@ -291,7 +293,7 @@ ul.tabbed-pane-header-tabs {
   text-shadow: rgba(255, 255, 255, 0.5) 0 1px 0;
   white-space: nowrap;
   display:block;
-  padding: 0 10px; 
+  padding: 0 10px;
   text-align: center;
 }
 
@@ -371,5 +373,5 @@ table#breakdown td.meter-col {
 }
 
 
- 
+
 
